CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0048 OLD)
PROJECT(compilers_implementation)

SET(CMAKE_CXX_STANDARD 14)

# Google Benchmark and Google Test
SET(BENCHMARK_ENABLE_TESTING OFF)
SET(BENCHMARK_DOWNLOAD_DEPENDENCIES ON)
INCLUDE(cmake/ConfigGBench.cmake)
INCLUDE(cmake/ConfigGTest.cmake)

ENABLE_TESTING()

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/compilers/)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/tests/)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/benchmarks/)
